--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script src="./node_modules/p5/lib/p5.js"></script>
         <script src="./node_modules/p5/lib/addons/p5.sound.js"></script>
         <link rel="stylesheet" type="text/scc" href="./style.css">
+        <script defer src="https://rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script>
         <meta charset="utf-8">
     </head>
     <body>
